tests/baselines/reference/importDeclWithExportModifierAndExportAssignmentInAmbientContext.errors.txt
importDeclWithExportModifierAndExportAssignmentInAmbientContext.ts(2,12): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
importDeclWithExportModifierAndExportAssignmentInAmbientContext.ts(7,5): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== importDeclWithExportModifierAndExportAssignmentInAmbientContext.ts (2 errors) ====
    declare module "m" {
        module x {
               ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            interface c {
            }
        }
        export import a = x.c;
        export = x;
        ~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    }